[package]
name = "esdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = "*"
eventstore = "2.1"
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "time"]}
futures = "*"