[package]
name = "esdb-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = "*"
#eventstore = "2.1"
eventstore = { git = "https://github.com/EventStore/EventStoreDB-Client-Rust.git", branch = "new-stats-parsing" }
eventstore-extras = { git = "https://github.com/EventStore/EventStoreDB-Client-Rust.git", branch = "new-stats-parsing" }
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
futures = "*"
itertools = "*"
log = "*"
log4rs = { version = "*", features = ["file_appender"] }
chrono = "*"
serde = "*"
serde_json = "*"
uuid = { version = "*", features = ["v4"] }
