[package]
name = "esdb-tui"
version = "0.1.0"
authors = ["Yorick Laupa <yo.eight@gmail.com>"]
edition = "2021"
description = "An EventStoreDB administration tool"
license = "BSD3"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = "*"
#eventstore = "2.1"
eventstore = { git = "https://github.com/EventStore/EventStoreDB-Client-Rust.git", rev = "159bc6c26aa2c4959d5a8cf97606318d5a29d386" }
eventstore-extras = { git = "https://github.com/EventStore/EventStoreDB-Client-Rust.git", rev = "159bc6c26aa2c4959d5a8cf97606318d5a29d386" }
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
futures = "*"
itertools = "*"
log = "*"
log4rs = { version = "*", features = ["file_appender"] }
chrono = "*"
serde = "*"
serde_json = "*"
uuid = { version = "*", features = ["v4"] }
